--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="./style.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+
+  <!-- CSS Stylesheets -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <title>Catstagram</title>
+  <script type="module" src="./index.js"></script>
 </head>
 
 <body>
+  <section>
+  <div class="navigation">
+    <div class="logo">
+      <a class="no-underline" href="#">
+       Catstagram
+      </a>
+    </div>
+    <div class="navigation-search-container">
+      <i class="fa fa-search"></i>
+      <input class="search-field" type="search" placeholder="Search">
+      <div class="search-container">
+        <div class="search-container-box">
+          <div class="search-results">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navigation-icons">
+        <i class="far fa-compass"></i>
+      </a>
+      <a class="navigation-link notifica">
+        <i class="far fa-heart" id="hearticon">
+        </i>
+      </a>
+      <a class="navigation-link" id="users">
+        <i class="far fa-user-circle"></i>
+      </a>
+      <a id="signout" class="navigation-link">
+        <i class="fas fa-sign-out-alt"></i>
+      </a>
+      <section id="body1" class="dark-mode">
+      <button type="button" name="dark-light" onclick="toggleDarkLight()" title="Toggle dark/light mode">
+        🌛
+      </button>
+    </section>
+    </div>
+  </div>
+  </section>
+<script>
+  function toggleDarkLight() {
+  var body = document.getElementById("body1");
+  var currentClass = body.className;
+  body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
+}
+</script>
+
 </body>
+
 
 </html>
